--- a/test_makefile/bins_make/Makefile
+++ b/test_makefile/bins_make/Makefile
@@ -1,34 +1,22 @@
-#CC = aarch64-oe-linux-gcc
 CC = gcc
-#CPP = g++
-#AR = ar rc
 
 #INC =  -I./include/
-#INC ?= --sysroot=/usr/local/oecore-x86_64/sysroots/aarch64-oe-linux
-
-LIBVAR = -lpthread
+#LIBVAR = -lpthread
 #LIBPATH = -L./lib
-LIBPATH =
+#CFLAGS ?= -O2 -g 
 
-#CFLAGS ?= -O2 -fexpensive-optimizations -frename-registers -fomit-frame-pointer 
-#CFLAGS += -Wl,-O1 -Wl,--hash-style=gnu -Wl,--as-needed
+OBJS := test.o
+OBJS += hello.o
 
-OBJS := main.o
-OBJS += add.o
-OBJS += sub.o
+SRCS := test.c
+SRCS += hello.c
 
-SRCS := main.c
-SRCS += add.c
-SRCS += sub.c
 TARGET = test hello
+
 all:$(TARGET)
-
-test:$(OBJS)
-	$(CC) $(INC) $(CFLAG) -o $@ $^ $(LIBVAR) $(LIBPATH) 
 	@echo "build success"
-
-$(OBJS):$(SRCS)
-	$(CC) $(INC) $(CFLAG) -c $^ $(LIBVAR) $(LIBPATH) 
+test:test.c
+	$(CC) $(INC) $(CFLAG) -o $@ $^ $(LIBVAR) $(LIBPATH) 
 
 hello:hello.c	
 	$(CC) $(INC) $(CFLAG) -o $@ $^ $(LIBVAR) $(LIBPATH) 
@@ -37,4 +25,4 @@ clean:
 	rm -rf $(OBJS) $(TARGET) 
 
 install:
-	@echo "rtmp do nothing"
+	@echo "do nothing"
